# RayTrace

./: CMakeLists.txt  LICENSE.txt  README.md  README.txt  my.pov
Examples/: bunny-area.pov  room-area.pov  simple-area.pov
docs/: README.md
src/: Box.cpp  Box.h  Camera.cpp  Camera.h  Cone.cpp  Cone.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Object.cpp  Object.h  Parser.cpp  Parser.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  main.cpp
src/Geometry/: Box.cpp  Box.h  Cone.cpp  Cone.h  Geometry.cpp  Geometry.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/Scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/Util/: BVHNode.cpp  BVHNode.h  Object.h  Parser.cpp  Parser.h
